# Coffee_Problem

./: .gitignore  Dockerfile  PROBLEM.md  README.md  coffee_pot.json  default.nix  main.py  pyproject.toml  requirements.txt  rest-test.http
static/: script.js  style.css
templates/: index.html
