[project]
name = "bertram-interview-question"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[tool.setuptools]
packages = []
